--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.2.9",
     "nanoid": "^4.0.2",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.9",
+    "styled-components": "^5.3.10",
     "styled-system": "^5.1.5",
     "web-vitals": "^2.1.3"
   },
